<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise3">
    <TextView
        android:id="@+id/textViewThickness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/line_thickness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLineColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/line_color"
        app:layout_constraintStart_toEndOf="@+id/textViewThickness"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewArrowKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/arrow_keys"
        app:layout_constraintStart_toEndOf="@+id/textViewLineColor"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="180dp"
        android:text="@string/clear_canvas"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewThickness" />

    <TextView
        android:id="@+id/textViewY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toTopOf="@+id/textViewLineColor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLineColor">

        <RadioButton
            android:id="@+id/rbColo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color1"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="48dp" />

        <RadioButton
            android:id="@+id/rbColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color2"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="89dp" />

        <RadioButton
            android:id="@+id/rbColor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color3"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="128dp" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:entries="@array/thickness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewThickness"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton_up"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton_down"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton_left"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_up"
        app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton_left"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_up"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton_right"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_up"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/Image_draw_lines"
        android:layout_width="352dp"
        android:layout_height="361dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

</androidx.constraintlayout.widget.ConstraintLayout>